# axum-template

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/main/: authentication.sql  authorization.sql  configuration.sql  internal_user.sql  tenant.sql
migrations/main/seed/: initial_users.sql
migrations/tenant/: admin_user.sql  authentication.sql  authorization.sql  tenant.sql  user_base.sql
src/: main.rs
src/database/: mod.rs  query_builder.rs
src/global/: error_handling.rs  mod.rs  parameter_query_builder.rs  response_builder.rs
src/tests/: users.rs
src/users/: mod.rs  routes.rs  user.rs  user_management.rs
src/users/dtos/: user_dto.rs
src/users/entities/: user.rs
src/users/routes/: index.rs
src/users/services/: index.rs
